Add large file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 dockerfile/industrial-edge-app-publisher.deb
 dockerfile/industrial-edge-app-publisher.deb
+dockerfile/industrial-edge-app-publisher.deb
