Add large file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 dockerfile/industrial-edge-app-publisher.deb
 dockerfile/industrial-edge-app-publisher.deb
 dockerfile/industrial-edge-app-publisher.deb
+dockerfile/industrial-edge-app-publisher.deb
