Block all .deb files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ dockerfile/industrial-edge-app-publisher.deb
 dockerfile/industrial-edge-app-publisher.deb
 dockerfile/industrial-edge-app-publisher.deb
 dockerfile/industrial-edge-app-publisher.deb
+dockerfile/industrial-edge-app-publisher-*.deb
