--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 src/docker/dockerfile/industrial-edge-app-publisher.deb
 src/docker/dockerfile/industrial-edge-app-publisher-*.deb
+src/docker/dockerfile/industrial-edge-app-publisher
+src/docker/dockerfile/industrial-edge-app-publisher-*
