--- a/src/docker/dockerfile/dockerfile
+++ b/src/docker/dockerfile/dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:22.04
 	
 RUN apt-get update
 	
-COPY industrial-edge-app-publisher.deb /usr/bin
+COPY industrial-edge-app-publisher-v1.22.10 /usr/bin
 
 RUN apt-get install -y curl gnupg2 pass
 RUN curl -sSL https://get.docker.com/ | sh
@@ -10,32 +10,4 @@ RUN apt-get install -y docker-compose
 
 RUN mkdir -p /app/src/workspace
 WORKDIR /app/src/workspace
-RUN industrial-edge-app-publisher ws init
-
-
-
-
-'# Basis-Image aktualisieren
-FROM ubuntu:22.04
-
-# Docker Installation
-RUN apt-get update && \
-    apt-get install -y \
-        ca-certificates \
-        curl \
-        gnupg && \
-    install -m 0755 -d /etc/apt/keyrings && \
-    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg && \
-    chmod a+r /etc/apt/keyrings/docker.gpg && \
-    echo \
-      "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
-      "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | \
-      tee /etc/apt/sources.list.d/docker.list > /dev/null && \
-    apt-get update && \
-    apt-get install -y \
-      docker-ce \
-      docker-ce-cli \
-      containerd.io \
-      docker-buildx-plugin \
-      docker-compose-plugin
-'
+RUN industrial-edge-app-publisher-v1.22.10.deb ws init
