--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ src/docker/dockerfile/industrial-edge-app-publisher.deb
 src/docker/dockerfile/industrial-edge-app-publisher-*.deb
 src/docker/dockerfile/industrial-edge-app-publisher
 src/docker/dockerfile/industrial-edge-app-publisher-*
+src/docker/dockerfile/ie-app-publisher-linux
