--- a/src/docker/dockerfile/dockerfile
+++ b/src/docker/dockerfile/dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:22.04
 	
 RUN apt-get update
 	
-COPY industrial-edge-app-publisher-v1.22.10 /usr/bin
+COPY ie-app-publisher-linux /usr/bin
 
 RUN apt-get install -y curl gnupg2 pass
 RUN curl -sSL https://get.docker.com/ | sh
@@ -10,4 +10,4 @@ RUN apt-get install -y docker-compose
 
 RUN mkdir -p /app/src/workspace
 WORKDIR /app/src/workspace
-RUN industrial-edge-app-publisher-v1.22.10.deb ws init
+RUN ie-app-publisher-linux ws init
