--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-src/docker/dockerfile/industrial-edge-app-publisher.deb
-src/docker/dockerfile/industrial-edge-app-publisher-*.deb
-src/docker/dockerfile/industrial-edge-app-publisher
-src/docker/dockerfile/industrial-edge-app-publisher-*
-src/docker/dockerfile/ie-app-publisher-linux
+**/industrial-edge-app-publisher*
+**/ie-app-publisher-linux
