--- a/src/dockerfile/dockerfile
+++ b/src/dockerfile/dockerfile
@@ -8,6 +8,8 @@ RUN apt-get install -y curl gnupg2 pass
 RUN curl -sSL https://get.docker.com/ | sh
 RUN apt-get install -y docker-compose
 
+RUN apt-get update && apt-get install -y jq && rm -rf /var/lib/apt/lists/*
+
 RUN mkdir -p /app/src/workspace
 WORKDIR /app/src/workspace
 RUN ie-app-publisher-linux ws init
