--- a/src/dockerfile/dockerfile
+++ b/src/dockerfile/dockerfile
@@ -2,6 +2,8 @@ FROM ubuntu:22.04
 	
 RUN apt-get update
 	
+COPY ie-app-publisher-linux /usr/bin
+
 RUN apt-get install -y curl gnupg2 pass
 RUN curl -sSL https://get.docker.com/ | sh
 RUN apt-get install -y docker-compose
@@ -10,3 +12,4 @@ RUN apt-get update && apt-get install -y jq && rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /app/src/workspace
 WORKDIR /app/src/workspace
+RUN ie-app-publisher-linux ws init
