--- a/src/app/docker-compose.yml
+++ b/src/app/docker-compose.yml
@@ -2,11 +2,10 @@ version: '2.4'
 services:
   hello-edge:
     image: hello-edge
+    build: .
+    ports:
+      - '1234:80'
     mem_limit: 200mb
     restart: always
     volumes:
-      - publish-data:/publish/
-      - cfg-data:/cfg-data/
-volumes:
-  publish-data:
-  cfg-data:
+      - './html/:/usr/share/nginx/html'
