--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -46,7 +46,8 @@ node {
                     iectl publisher app-project version create \
                         -a "$APP_ID" \
                         -v "0.0.${BUILD_NUMBER}" \
-                        -y ./docker-compose.prod.yml \
+
+                        -y src/optA-Shell-script/app/docker-compose.prod.yml
                         -n '{"hello-edge":[{"name":"hello-edge","protocol":"HTTP","port":"80","headers":"","rewriteTarget":"/"}]}' \
                         -s 'hello-edge' \
                         -t 'FromBoxReverseProxy' \
