--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -47,7 +47,7 @@ node {
                         -a "$APP_ID" \
                         -v "0.0.${BUILD_NUMBER}" \
 
-                        -y src/optA-Shell-script/app/docker-compose.prod.yml
+                        -y src/optA-Shell-script/app/docker-compose.prod.yml \
                         -n '{"hello-edge":[{"name":"hello-edge","protocol":"HTTP","port":"80","headers":"","rewriteTarget":"/"}]}' \
                         -s 'hello-edge' \
                         -t 'FromBoxReverseProxy' \
