--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -42,17 +42,32 @@ node {
                     iectl config add iem --name 'iemdev' --url "$IEM_URL" --user "$USER_NAME" --password "$PSWD"
 
                     echo "----- Create new app version ------"
-                    # I have used BUILD_NUMBER from Jenkins to create versions. If the apps are being deployed differentley as well you would need to get the version via "app-details"
                     iectl publisher app-project version create \
                         -a "$APP_ID" \
+                        # I have used BUILD_NUMBER from Jenkins to create versions. If the apps are being deployed differentley as well you would need to get the version via "app-details"
                         -v "0.0.${BUILD_NUMBER}" \
-
-                        -y src/optA-Shell-script/app/docker-compose.prod.yml \
+                        # -y ./docker-compose.prod.yml \
+                        -y ./src/optA-Shell-script/app/docker-compose.prod.yml \
                         -n '{"hello-edge":[{"name":"hello-edge","protocol":"HTTP","port":"80","headers":"","rewriteTarget":"/"}]}' \
                         -s 'hello-edge' \
                         -t 'FromBoxReverseProxy' \
                         -u 'hello-edge' \
                         -r '/'
+
+                    #iectl publisher app-project version create \
+                    #-a "$APP_ID" \
+                    #-v $NEW_VERSION \
+                    #-y ./app/docker-compose.prod.yml \
+                    #-n '{"hello-edge":[{"name":"hello-edge","protocol":"HTTP","port":"80","headers":"","rewriteTarget":"/"}]}' \
+                    #-s 'hello-edge' \
+                    #-t 'FromBoxReverseProxy' \
+                    #-u "hello-edge" \
+                    #-r "/"
+
+
+
+
+
 
                     echo "----- Deploy on edge device ------"
                     iectl iem app-project install \
