--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -44,7 +44,8 @@ node {
                     echo "----- Create new app version ------"
                     iectl publisher app-project version create \
                         -a "$APP_ID" \
-                        -v "0.0.${BUILD_NUMBER}" \ # I have used BUILD_NUMBER from Jenkins to create versions. If the apps are being deployed differentley as well you would need to get the version via "app-details"
+                        # I have used BUILD_NUMBER from Jenkins to create versions. If the apps are being deployed differentley as well you would need to get the version via "app-details" \
+                        -v "0.0.${BUILD_NUMBER}" \
                         # -y ./docker-compose.prod.yml \
                         -y ./src/optA-Shell-script/app/docker-compose.prod.yml \
                         -n '{"hello-edge":[{"name":"hello-edge","protocol":"HTTP","port":"80","headers":"","rewriteTarget":"/"}]}' \
