--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -48,10 +48,10 @@ node {
                         -a "$APP_ID" \
                         -v "0.0.${BUILD_NUMBER}" \
                         -y ./docker-compose.prod.yml \
-                        -n '{"hello-edge":[{"name":"hello-edge","protocol":"HTTP","port":"80","headers":"","rewriteTarget":"/"}]}' \
-                        -s 'hello-edge' \
+                        -n '{"JenkinsCICD-Demo":[{"name":"JenkinsCICD-Demo","protocol":"HTTP","port":"80","headers":"","rewriteTarget":"/"}]}' \
+                        -s 'JenkinsCICD-Demo' \
                         -t 'FromBoxReverseProxy' \
-                        -u 'hello-edge' \
+                        -u 'JenkinsCICD-Demo' \
                         -r '/'
 
                     echo "----- Deploy on edge device ------"
