--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -41,6 +41,13 @@ node {
                     export EDGE_SKIP_TLS=1
                     iectl config add iem --name 'iemdev' --url "$IEM_URL" --user "$USER_NAME" --password "$PSWD"
 
+
+                    # debug info
+                    echo "DEBUG: PROJECT_NAME='$PROJECT_NAME'"
+                    echo "DEBUG: APP_ID='$APP_ID'"
+                    # debug info end
+
+
                     echo "----- Create new app version ------"
                     # I have used BUILD_NUMBER from Jenkins to create versions. If the apps are being deployed differentley as well you would need to get the version via "app-details" \
                     # -y ./docker-compose.prod.yml \
@@ -59,6 +66,15 @@ node {
 
 
                     # temp stuff
+                    CREATE_OUTPUT=$(iectl publisher app-project version create \
+                    -a "$APP_ID" \
+                    -v "0.0.${BUILD_NUMBER}" \
+                    -y ./docker-compose.prod.yml \
+                    -n '{"JenkinsCICD-Demo":[{"name":"JenkinsCICD-Demo","protocol":"HTTP","port":"80","headers":"","rewriteTarget":"/"}]}' \
+                    -s 'JenkinsCICD-Demo' \
+                    -t 'FromBoxReverseProxy' \
+                    -u 'JenkinsCICD-Demo' \
+                    -r '/' 2>&1)
                     CREATE_EXIT_CODE=$?
                     set -e
 
@@ -72,18 +88,16 @@ node {
                     exit 1
                     fi
 
+                    # Prüfen der App-Details (mit PROJECT_NAME!)
+                    if [ -z "$PROJECT_NAME" ]; then
+                    echo "ERROR: PROJECT_NAME is empty. Please set PROJECT_NAME in Jenkins environment or export it."
+                    exit 1
+                    fi
+
                     APP_DETAILS=$(iectl iem app-project app-details --project-name "$PROJECT_NAME" --app-name "JenkinsCICD-Demo" 2>&1) || true
                     echo "----- DEBUG: app-details START -----"
                     echo "$APP_DETAILS"
                     echo "----- DEBUG: app-details END -----"
-
-                    # Versionsliste (falls JSON valide)
-                    echo "Versions in IEM for JenkinsCICD-Demo:"
-                    echo "$APP_DETAILS" | jq -r '.versions[]?.versionNumber' || echo "No versions or jq missing/invalid JSON"
-
-                    echo "appId from IEM:"
-                    echo "$APP_DETAILS" | jq -r '.appId // "NOT_FOUND"' || true
-                    echo "Configured APP_ID in Jenkins: $APP_ID"
                     # temp stuff end
 
 
