--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -40,7 +40,7 @@ node {
 
                     echo "----- Set publisher configuration ------"
                     # iectl config add publisher --name "iemdev" --dockerurl "http://docker:2375" --workspace "./workspace" #FIX change back later to ./workspace
-                    iectl config add publisher --name "iemdev" --dockerurl "http://docker:2375" --workspace "."
+                    iectl config add publisher --name "iemdev" --dockerurl "http://docker:2375" --workspace "/var/lib/jenkins/workspace/Jankis"
 
                     echo "----- IEM Login ------"
                     export IE_SKIP_CERTIFICATE=true
