--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -22,18 +22,17 @@ node {
                     export IE_SKIP_CERTIFICATE=true
                     export EDGE_SKIP_TLS=1
 
-                    echo "----- Prepare workspace ------"
-                    rm -rf "$PROJECT_PATH_PREFIX/workspace"
-                    mkdir "$PROJECT_PATH_PREFIX/workspace"
-                    #cp -RT "$PROJECT_PATH_PREFIX/app" "$PROJECT_PATH_PREFIX/workspace"
-                    cp -a "$PROJECT_PATH_PREFIX"/app/. "$PUBLISHER_WS"/
-
                     echo "----- Set publisher configuration ------"
                     iectl config add publisher --name "iemdev" --dockerurl "http://docker:2375" --workspace "$PROJECT_PATH_PREFIX/workspace"
 
-                    # init workspace and copy app files
-                    # iectl publisher workspace init
-
+                    echo "----- Prepare workspace ------"
+                    rm -rf "$PROJECT_PATH_PREFIX/workspace"
+                    mkdir "$PROJECT_PATH_PREFIX/workspace"
+                
+                    echo "----- init workspace and copy app files -----"
+                    iectl publisher workspace init
+                    #cp -RT "$PROJECT_PATH_PREFIX/app" "$PROJECT_PATH_PREFIX/workspace"
+                
                     echo "----- IEM Login ------"
                     iectl config add iem --name 'iemdev' --url "$IEM_URL" --user "$USER_NAME" --password "$PSWD"
 
