--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -28,13 +28,13 @@ node {
                     echo "----- Prepare workspace ------"
                     rm -rf "$PROJECT_PATH_PREFIX/workspace"
                     mkdir "$PROJECT_PATH_PREFIX/workspace"
-                    cd "$PROJECT_PATH_PREFIX/workspace"
-                    ls -la
+                    #cd "$PROJECT_PATH_PREFIX/workspace"
+                    tree
                 
                     echo "----- init workspace and copy app files -----"
                     iectl publisher workspace init
                     cp -RT "$PROJECT_PATH_PREFIX/app" "$PROJECT_PATH_PREFIX/workspace"
-                    ls -la                
+                                    
 
                     echo "----- IEM Login ------"
                     iectl config add iem --name 'iemdev' --url "$IEM_URL" --user "$USER_NAME" --password "$PSWD"
