--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -72,10 +72,10 @@ iectl publisher app-project list --verbose || iectl publisher app-project list
 iectl iem app-project list --verbose || iectl iem app-project list
 
 # Optional: Details zur konkreten App (wenn du APP_ID oder -Name hast)
-iectl iem app-project app-details --app-id "$APP_ID" || iectl iem app-project app-details --project-name "$APP_NAME"
+iectl iem app-project app-details --app-id "$APP_ID" || iectl iem app-project app-details --project-name "$APP_NAME" --app-name "$APP_NAME"
 
 # Wiederhole Upload mit verbose-Flag, damit iectl mehr Infos ausgibt
-iectl --verbose publisher app-project upload catalog --appname "$APP_NAME" -v "0.0.${BUILD_NUMBER}"
+#iectl --verbose publisher app-project upload catalog --appname "$APP_NAME" -v "0.0.${BUILD_NUMBER}"
 
 # tests end
 
