--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -30,10 +30,11 @@ node {
                     mkdir "$PROJECT_PATH_PREFIX/workspace"
                 
                     echo "----- init workspace and copy app files -----"
-                    #iectl publisher workspace init
-                    cp -RT "$PROJECT_PATH_PREFIX/app" "$PROJECT_PATH_PREFIX/workspace"              
                     cd "$PROJECT_PATH_PREFIX/workspace"
-                    
+                    iectl publisher workspace init
+                    cp -RT "$PROJECT_PATH_PREFIX/app" "$PROJECT_PATH_PREFIX/workspace"              
+                    tree
+
                     echo "----- IEM Login ------"
                     iectl config add iem --name 'iemdev' --url "$IEM_URL" --user "$USER_NAME" --password "$PSWD"
 
@@ -78,6 +79,7 @@ iectl iem app-project app-details --app-id "$APP_ID" || iectl iem app-project ap
 # Wiederhole Upload mit verbose-Flag, damit iectl mehr Infos ausgibt
 #iectl --verbose publisher app-project upload catalog --appname "$APP_NAME" -v "0.0.${BUILD_NUMBER}"
 
+tree
 # tests end
 
                     echo "----- Upload app version to IEM ------"
