--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -26,8 +26,8 @@ node {
                     iectl config add publisher --name "iemdev" --dockerurl "http://docker:2375" --workspace "$PROJECT_PATH_PREFIX/workspace"
 
                     echo "----- Prepare workspace ------"
-                    rm -rf "$PROJECT_PATH_PREFIX/workspace"
-                    mkdir "$PROJECT_PATH_PREFIX/workspace"
+                    #rm -rf "$PROJECT_PATH_PREFIX/workspace"
+                    #mkdir "$PROJECT_PATH_PREFIX/workspace"
                 
                     echo "----- init workspace and copy app files -----"
                     iectl publisher workspace init
