--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -26,15 +26,39 @@ node {
                     iectl config add publisher --name "iemdev" --dockerurl "http://docker:2375" --workspace "$PROJECT_PATH_PREFIX/workspace"
 
                     echo "----- Prepare workspace ------"
-                    #rm -rf "$PROJECT_PATH_PREFIX/workspace"
-                    #mkdir "$PROJECT_PATH_PREFIX/workspace"
+                    rm -rf "$PROJECT_PATH_PREFIX/workspace"
+                    mkdir "$PROJECT_PATH_PREFIX/workspace"
                 
                     echo "----- init workspace and copy app files -----"
                     iectl publisher workspace init
-                    cp -RT "$PROJECT_PATH_PREFIX/app" "$PROJECT_PATH_PREFIX/workspace"
+                    #cp -RT "$PROJECT_PATH_PREFIX/app" "$PROJECT_PATH_PREFIX/workspace"
 
                     echo "----- IEM Login ------"
                     iectl config add iem --name 'iemdev' --url "$IEM_URL" --user "$USER_NAME" --password "$PSWD"
+
+
+
+                  echo "----- Checking and creating App Project "$APP_NAME" "$$APP_ID" ------"
+                    try {
+                        sh """
+                            iectl publisher app-project create \\
+                                --name "$APP_NAME" \\
+                                --id "$APP_ID" \\
+                                --type "Standalone" \\
+                                --description "My Jenkins CI/CD Demo Application"
+                        """
+                        echo "App Project "$APP_NAME" created successfully."
+                    } catch (err) {
+                        echo "App Project "$APP_NAME}" probably already exists, skipping creation. Error: ${err}"
+                    }
+
+
+
+
+
+
+
+
 
                     echo "----- Create new app version ------"
                     # I have used BUILD_NUMBER from Jenkins to create versions. If the apps are being deployed differentley as well you would need to get the version via "app-details" \
@@ -48,17 +72,16 @@ node {
                         -u 'JenkinsCICD-Demo' \
                         -r '/'
                     
-                    echo "----- Upload app version to IEM ------"
-                    cd "${env.PROJECT_PATH_PREFIX}/app"
-                    iectl publisher standalone-app version export \
-                        --appname "$APP_NAME" \
-                       --versionnumber "0.0.${BUILD_NUMBER}" \
-                        --exportpath "app_export"
+                    #echo "----- Upload app version to IEM ------"
+                    #iectl publisher standalone-app version export \
+                    #    --appname "$APP_NAME" \
+                    #    --versionnumber "0.0.${BUILD_NUMBER}" \
+                    #    --exportpath "app_export"
 
                     echo "----- Deploy on edge device ------"
                     iectl iem app-project install \
                         -a "$APP_NAME" \
-                       --version "0.0.${BUILD_NUMBER}" \
+                        --version "0.0.${BUILD_NUMBER}" \
                         -i '{"devices":["'"$EDGE_DEVICE_ID"'"]}'                    
                     """
                 }
