--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -38,7 +38,7 @@ node {
 
 
 
-                  echo "----- Checking and creating App Project "$APP_NAME" "$$APP_ID" ------"
+                  echo "----- Checking and creating App Project "$APP_NAME" "$APP_ID" ------"
                     try {
                         sh """
                             iectl publisher app-project create \\
