--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -41,10 +41,10 @@ node {
                   echo "----- Checking and creating App Project "$APP_NAME" "$APP_ID" ------"
                     try {
                         sh """
-                            iectl publisher app-project create \\
-                                --name "$APP_NAME" \\
-                                --id "$APP_ID" \\
-                                --type "Standalone" \\
+                            iectl publisher app-project create \
+                                --name "$APP_NAME" \
+                                --id "$APP_ID" \
+                                --type "Standalone" \
                                 --description "My Jenkins CI/CD Demo Application"
                         """
                         echo "App Project "$APP_NAME" created successfully."
