--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -36,23 +36,6 @@ node {
                     echo "----- IEM Login ------"
                     iectl config add iem --name 'iemdev' --url "$IEM_URL" --user "$USER_NAME" --password "$PSWD"
 
-
-
-                  echo "----- Checking and creating App Project "$APP_NAME" "$APP_ID" ------"
-                            iectl publisher app-project create \
-                                --name "$APP_NAME" \
-                                --id "$APP_ID" \
-                                --type "Standalone" \
-                                --description "My Jenkins CI/CD Demo Application"
-
-
-
-
-
-
-
-
-
                     echo "----- Create new app version ------"
                     # I have used BUILD_NUMBER from Jenkins to create versions. If the apps are being deployed differentley as well you would need to get the version via "app-details" \
                     iectl publisher app-project version create \
@@ -65,11 +48,10 @@ node {
                         -u 'JenkinsCICD-Demo' \
                         -r '/'
                     
-                    #echo "----- Upload app version to IEM ------"
-                    #iectl publisher standalone-app version export \
-                    #    --appname "$APP_NAME" \
-                    #    --versionnumber "0.0.${BUILD_NUMBER}" \
-                    #    --exportpath "app_export"
+                    echo "----- Upload app version to IEM ------"
+                    iectl publisher app-project upload catalog  \
+                        --appname "$APP_NAME" \
+                        --versionnumber "0.0.${BUILD_NUMBER}" \
 
                     echo "----- Deploy on edge device ------"
                     iectl iem app-project install \
