--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -36,10 +36,17 @@ node {
                     echo "----- IEM Login ------"
                     iectl config add iem --name 'iemdev' --url "$IEM_URL" --user "$USER_NAME" --password "$PSWD"
 
+                    iectl publisher standalone-app create \
+                        --appname "$APP_NAME" \
+                        --appId "$APP_ID" \
+                        --reponame "$APP_ID" \
+                        --appdescription "My Jenkins CI/CD Demo Application" || true
+
                     echo "----- Create new app version ------"
                     # I have used BUILD_NUMBER from Jenkins to create versions. If the apps are being deployed differentley as well you would need to get the version via "app-details" \
-                    iectl publisher app-project version create \
+                    iectl publisher standalone-app version create \
                         -a "$APP_ID" \
+                        --changelogs "Jenkins CI/CD Build ${BUILD_NUMBER}" \
                         -v "0.0.${BUILD_NUMBER}" \
                         -y "$PROJECT_PATH_PREFIX/app/docker-compose.prod.yml" \
                         -n '{"JenkinsCICD-Demo":[{"name":"JenkinsCICD-Demo","protocol":"HTTP","port":"80","headers":"","rewriteTarget":"/"}]}' \
